integrasi vendor ke event input harga vendor

--- a/EventOrganizer/src/main/resources/templates/asisten/kelola-klien.html
+++ b/EventOrganizer/src/main/resources/templates/asisten/kelola-klien.html
@@ -59,7 +59,7 @@
     </div>
 
     <main class="container main-content">
-        
+        <!-- MEMANAJEMEN KLIEN -->
         <div class="page-header">
             <div>
                 <h2>Manajemen Klien</h2>
