--- a/EventOrganizer/src/main/resources/templates/pemilik/jenis-vendor.html
+++ b/EventOrganizer/src/main/resources/templates/pemilik/jenis-vendor.html
@@ -10,7 +10,6 @@
     <script src="/js/pemilik/jenis-vendor.js" defer></script>
 </head>
 <body>
-
     <header class="top-header">
         <div class="brand-section">
             <h1>Kapi Event Organizer</h1>
@@ -26,7 +25,6 @@
             </button>
         </div>
     </header>
-
     <nav class="nav-tabs">
         <a href="/pemilik/dashboard" class="nav-item">
             <i class="fa-solid fa-users-gear"></i> Kelola Asisten
@@ -113,7 +111,7 @@
                 </div>
                 <p class="card-desc">Pembawa acara profesional</p>
             </div>
-
+            <!--MENAMBAHKAN CATEGORY -->
             <div class="category-card">
                 <div class="card-header">
                     <h3 class="card-title">Dekorasi</h3>
