--- a/EventOrganizer/src/main/resources/templates/pemilik/laporan-event.html
+++ b/EventOrganizer/src/main/resources/templates/pemilik/laporan-event.html
@@ -10,7 +10,7 @@
     <script src="/js/pemilik/laporan-event.js" defer></script>
 </head>
 <body>
-
+    <!-- INTEGRASI VENDOR KE EVENT -->
     <div class="sticky-top-container">
         <header class="top-header">
             <div class="brand-section">
